<resources>
    <string name="app_name">NetApp</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="public_repos">Public Repos</string>
    <string name="following">Following</string>
    <string name="user_avatar">user_avatar</string>
</resources>
