<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_view_followers_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_view_followers"
        app:layout_constraintStart_toStartOf="@+id/text_view_followers"
        app:layout_constraintTop_toBottomOf="@+id/text_view_followers" />

    <TextView
        android:id="@+id/text_view_following_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_view_following"
        app:layout_constraintStart_toStartOf="@+id/text_view_following"
        app:layout_constraintTop_toBottomOf="@+id/text_view_following" />

    <TextView
        android:id="@+id/text_view_public_repos_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_view_public_repos"
        app:layout_constraintStart_toStartOf="@+id/text_view_public_repos"
        app:layout_constraintTop_toBottomOf="@+id/text_view_public_repos" />

    <ImageView
        android:id="@+id/image_view_avatar"
        android:layout_width="321dp"
        android:layout_height="399dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="143dp"
        android:contentDescription="@string/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="@+id/image_view_avatar"
        app:layout_constraintStart_toStartOf="@+id/image_view_avatar"
        app:layout_constraintTop_toBottomOf="@+id/image_view_avatar" />

    <TextView
        android:id="@+id/text_view_following"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:layout_marginTop="88dp"
        android:text="@string/following"
        app:layout_constraintEnd_toStartOf="@+id/text_view_followers"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_avatar" />

    <TextView
        android:id="@+id/text_view_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_avatar" />

    <TextView
        android:id="@+id/text_view_public_repos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/public_repos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_followers"
        app:layout_constraintTop_toBottomOf="@+id/image_view_avatar" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</android.support.constraint.ConstraintLayout>

